<resources>
    <string name="app_name">Football League</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="competitions">Competitions</string>
    <string name="favorite">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="league_name">league Name</string>
    <string name="code">Code</string>
    <string name="number_of_team">Number Of Team</string>
    <string name="current_match_day">current Match day</string>
    <string name="todo">TODO</string>
    <string name="no_team_available">No Team Available</string>
</resources>