<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="competition"
            type="com.task.football_league.domain.model.competitions.Competition" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@color/grey"
        android:padding="@dimen/_10sdp"
        app:carbon_cornerRadius="@dimen/_8sdp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:fontFamily="@font/font_semibold"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@{competition.name}"
            android:textColor="#707070"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDropDown"
            android:layout_width="22sp"
            android:layout_height="18sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/down_arrow"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:ignore="SmallSp">

        </ImageView>

        <ImageView
            android:id="@+id/ivDropUP"
            android:layout_width="22sp"
            android:layout_height="18sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/up_arrow"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:ignore="SmallSp">

        </ImageView>

        <ImageView
            android:id="@+id/ivFavoriteActive"
            android:layout_width="30sp"
            android:layout_height="25sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_favorite"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:ignore="SmallSp">

        </ImageView>

        <ImageView
            android:id="@+id/ivFavoriteInActive"
            android:layout_width="30sp"
            android:layout_height="25sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_favorite_border"
            app:layout_constraintBottom_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            tools:ignore="SmallSp">

        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/font_bold"
                android:text="@string/code"
                android:textColor="#707070"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:fontFamily="@font/font_semibold"
                android:text='@{competition.code.toString()==null || competition.code.toString().empty? "Not Available" : competition.code.toString()}'
                android:textColor="#707070"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView16" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/number_of_team"
                android:textColor="#707070"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView16"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />


            <TextView
                android:id="@+id/tvTeamNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_semibold"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/font_bold"
                android:text="@string/current_match_day"
                android:textColor="#707070"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/font_semibold"
                android:gravity="end"
                android:text="@{String.valueOf(competition.currentSeason.currentMatchday)}"
                android:textColor="#707070"
                android:textSize="15sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/textView15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView15" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>