<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@color/white"
                android:elevation="4sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UnusedAttribute" >

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:elevation="4sp"
                    android:fontFamily="@font/font_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_menu"
                    tools:ignore="ContentDescription,SpUsage,UnusedAttribute" />


                <ImageView
                    android:id="@+id/iv_menu"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_menu"
                    android:backgroundTint="#FFF"
                    android:background="#FFF"
                    app:layout_constraintBottom_toBottomOf="@id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView"
                    tools:ignore="ContentDescription,UnusedAttribute" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <fragment
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:navGraph="@navigation/mobile_navigation"
                tools:ignore="FragmentTagUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            android:paddingTop="@dimen/_50sdp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                       <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginHorizontal="@dimen/_30sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@color/grey"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="39dp" />

                    <TextView
                        android:id="@+id/tvAllCompetitions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/font_semibold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:text="@string/competitions"
                        android:textColor="@color/mainColor"
                        android:textSize="@dimen/_20sdp"
                        app:layout_constraintTop_toBottomOf="@+id/view"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/tvFavorites"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/font_semibold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:paddingHorizontal="@dimen/_20sdp"
                        android:text="@string/favorite"
                        android:textColor="@color/mainColor"
                        android:textSize="@dimen/_20sdp"
                        app:layout_constraintTop_toBottomOf="@+id/tvAllCompetitions"
                        tools:ignore="SpUsage" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>