<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="CompetitionDetails"
            type="com.task.football_league.domain.model.competition_details.CompetitionDetails" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:backgroundTint="@color/white">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="15sp"
                android:contentDescription="@string/todo"
                android:fontFamily="@font/font_semibold"
                android:padding="5sp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="@font/font_semibold"
                android:textColor="@color/colorAccent"
                android:textSize="22sp"
                android:text="@{CompetitionDetails.name}"
                app:layout_constraintBottom_toBottomOf="@+id/ivBack"
                app:layout_constraintStart_toEndOf="@+id/ivBack"
                app:layout_constraintTop_toTopOf="@+id/ivBack" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="15sp"
                android:background="@color/grey"
                android:padding="@dimen/_10sdp"
                app:carbon_cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/code"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semibold"
                    android:text="@{CompetitionDetails.code}"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView16" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_bold"
                    android:text="Area"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />


                <TextView
                    android:id="@+id/tvTeamNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semibold"
                    android:text="@{CompetitionDetails.area.name}"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView13" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtCurrentSession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/font_bold"
                android:text="Current Season"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutCurrentSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="15sp"
                android:background="@color/grey"
                android:padding="@dimen/_10sdp"

                app:carbon_cornerRadius="@dimen/_8sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtCurrentSession">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="Start Date"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semibold"
                    android:text="@{CompetitionDetails.currentSeason.startDate}"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView1" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_bold"
                    android:text="End Date"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView1" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semibold"
                    android:text="@{CompetitionDetails.currentSeason.endDate}"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_bold"
                    android:text="Current Match Day"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semibold"
                    android:text="@{String.valueOf(CompetitionDetails.currentSeason.currentMatchday)}"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/font_bold"
                    android:text="Winner"
                    android:textColor="#707070"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_semibold"
                    android:text="@{CompetitionDetails.currentSeason.winner.name}"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:fontFamily="@font/font_bold"
                android:text="Teams"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/constraintLayoutCurrentSeason"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayoutCurrentSeason" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_Competitions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTeams"
                tools:listitem="@layout/item_team" />

            <TextView
                android:id="@+id/tvNoTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_bold"
                android:text="@string/no_team_available"
                android:textColor="#707070"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTeams" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>